--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body id="bodyIndex">
     <header> 
         <nav class="navbar flex-row container">
-            <a href="index.html" class="logo"><img src="./public/image/logo.png" alt="logo"></a>
+            <a href="index.html" class="logo"><img id="logo" src="./public/image/logo.png" alt="logo"></a>
             <ul class="menu flex-row">
                 <li class="menu__item">
                     <a href="index.html" class="menu__link">Menu</a></li>
