--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css/style.css">
     <title>Menu</title>
 </head>
@@ -24,6 +25,11 @@
                     <a href="public/pages/contacto.html" class="menu__link">Contacto</a></li>
             </ul>
         </nav>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>HOLA!</strong> NO TE PIERDAS NUESTROS PRODUCTOS ESPECIALES PARA ESTAS PASCUAS!
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        
     </header>
     <main id="mainIndex">
         <section class="sectionOne">
@@ -44,6 +50,8 @@
         <a href="" class="redes">Facebook</a>
         <a href="" class="redes">Instagram</a>
         <a href="" class="redes">Twitter</a>
-    </footer>    
+    </footer>   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
+ 
 </body>
 </html>
