--- a/public/pages/nosotros.html
+++ b/public/pages/nosotros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Nosotros</title>
 </head>
@@ -26,7 +27,7 @@
         </nav>
     </header>
     <main>
-       
+        
     </main>
     <footer>
         <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
@@ -34,6 +35,7 @@
         <a href="" class="redes">Facebook</a>
         <a href="" class="redes">Instagram</a>
         <a href="" class="redes">Twitter</a>
-    </footer>       
+    </footer>   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
 </body>
 </html>
