Segunda entrega del Proyecto Final

--- a/public/pages/nosotros.html
+++ b/public/pages/nosotros.html
@@ -35,90 +35,29 @@
         </nav>
     </header>
     <main>
-        <div class="container my-2">
-            <div class="row justify-content-center">
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/alfajorAlmendras" class="card-img-top" alt="alfajor de almendras">
-                    <div class="card-body">
-                        <h5 class="card-title">Alfajor de Almendras</h5>
-                        <p class="card-text">Alfajor de base de nuez relleno de dulce de leche.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
+            <div id="carouselExampleControls" class="carousel slider" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../image/horno.jpg" class="imagenProductos d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../image/pasteleros.jpg" class="imagenProductos d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../image/pasteleros2.jpg" class="imagenProductos d-block w-100" alt="...">
                     </div>
                 </div>
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/budinBanana.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Budin de Banana</h5>
-                        <p class="card-text">Budín húmedo de banana y dulce de leche. </p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/cookies.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Cookies</h5>
-                        <p class="card-text">Cookie con chips de chocolate.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/hojaldritas.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Hojaldritas</h5>
-                        <p class="card-text">Base de hojaldre con crema pastelera y manzana.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/medialunas.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Medialunas</h5>
-                        <p class="card-text">Medialunas artesanales.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/budinNaranja.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Budin de Naranja</h5>
-                        <p class="card-text">Budín húmedo de naranja con crema de queso y almendras.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/tortaMerengada.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Torta Merengada</h5>
-                        <p class="card-text">Fruta de estación, crema batida y base de merengue.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/croissant.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Croissant</h5>
-                        <p class="card-text">Masa de hojaldre, puede ser relleno dulce o salado.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/tarteletaVainilla.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Tarteleta de Vainilla</h5>
-                        <p class="card-text">Masa sablée rellena con crema de vainilla con una capa de caramelo quemado.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
-                <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-                    <img src="../image/tartaletaLimon.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Tartaleta de Limon</h5>
-                        <p class="card-text">Masa sablée de limón rellena con lemon curd y decorada con trozos de merengue.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carro</a>
-                    </div>
-                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-        </div>
     </main>
     <footer>
         <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
