--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -1,61 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Productos</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Productos</title>
 </head>
+
 <body>
-    <header> 
-        <nav class="navbar flex-row container">
-            <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
-            <ul class="menu flex-row">
-                <li class="menu__item">
-                    <a href="../../index.html" class="menu__link">Menu</a></li>
-                <li class="menu__item">
-                    <a href="productos.html" class="menu__link">Productos</a></li>
-                <li class="menu__item">
-                    <a href="galeria.html" class="menu__link">Galeria</a></li>
-                <li class="menu__item">
-                    <a href="nosotros.html" class="menu__link">Nosotros</a></li>
-                <li class="menu__item">
-                    <a href="contacto.html" class="menu__link">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../image/macarons.jpg" class="imagenProductos d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../image/lemonPie.jpg" class="imagenProductos d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../image/miniTiramisu.jpg" class="imagenProductos d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+  <header>
+    <nav class="navbar flex-row container">
+      <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
+      <ul class="menu flex-row">
+        <li class="menu__item">
+          <a href="../../index.html" class="menu__link">Menu</a>
+        </li>
+        <li class="menu__item">
+          <a href="productos.html" class="menu__link">Productos</a>
+        </li>
+        <li class="menu__item">
+          <a href="galeria.html" class="menu__link">Galeria</a>
+        </li>
+        <li class="menu__item">
+          <a href="nosotros.html" class="menu__link">Nosotros</a>
+        </li>
+        <li class="menu__item">
+          <a href="contacto.html" class="menu__link">Contacto</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div class="container my-2">
+      <div class="row justify-content-center">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/alfajorAlmendras" class="card-img-top" alt="alfajor de almendras">
+          <div class="card-body">
+            <h5 class="card-title">Alfajor de Almendras</h5>
+            <p class="card-text">Alfajor de base de nuez relleno de dulce de leche.</p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
-    </main>
-    <footer>
-        <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
-        <a href="" class="redes">Whatssapp</a>
-        <a href="" class="redes">Facebook</a>
-        <a href="" class="redes">Instagram</a>
-        <a href="" class="redes">Twitter</a>
-    </footer>  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>   
+        </div>
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/budinBanana.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Budin de Banana</h5>
+            <p class="card-text">Budín húmedo de banana y dulce de leche. </p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
+          </div>
+        </div>
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/cookies.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Cookies</h5>
+            <p class="card-text">Cookie con chips de chocolate.</p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
+          </div>
+        </div>
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/hojaldritas.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Hojaldritas</h5>
+            <p class="card-text">Base de hojaldre con crema pastelera y manzana.</p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
+          </div>
+        </div>
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/medialunas.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Medialunas</h5>
+            <p class="card-text">Medialunas artesanales.</p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
+          </div>
+        </div>
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/budinNaranja.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Budin de Naranja</h5>
+            <p class="card-text">Budín húmedo de naranja con crema de queso y almendras.</p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
+          </div>
+        </div>
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/tortaMerengada.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Torta Merengada</h5>
+            <p class="card-text">Fruta de estación, crema batida y base de merengue.</p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
+          </div>
+        </div>
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/croissant.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Croissant</h5>
+            <p class="card-text">Masa de hojaldre, puede ser relleno dulce o salado.</p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
+          </div>
+        </div>
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/tarteletaVainilla.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Tarteleta de Vainilla</h5>
+            <p class="card-text">Masa sablée rellena con crema de vainilla con una capa de caramelo quemado.</p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
+          </div>
+        </div>
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
+          <img src="../image/tartaletaLimon.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Tartaleta de Limon</h5>
+            <p class="card-text">Masa sablée de limón rellena con lemon curd y decorada con trozos de merengue.</p>
+            <a href="#" class="btn btn-primary">Agregar al carro</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
+    <a href="" class="redes">Whatssapp</a>
+    <a href="" class="redes">Facebook</a>
+    <a href="" class="redes">Instagram</a>
+    <a href="" class="redes">Twitter</a>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
