sass a todas las paginas del proyecto

--- a/public/pages/nosotros.html
+++ b/public/pages/nosotros.html
@@ -34,7 +34,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="mainNosotros">
             <div id="carouselExampleControls" class="carousel slider" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
