--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar flex-row container">
             <a href="index.html" class="logo"><img id="logo" src="./public/image/logo.png" alt="logo"></a>
             <ul class="menu flex-row">
-                <li class="menu__item">
+                <li class="menu__item--active">
                     <a href="index.html" class="menu__link">Menu</a></li>
                 <li class="menu__item">
                     <a href="public/pages/productos.html" class="menu__link">Productos</a></li>
