--- a/public/pages/contacto.html
+++ b/public/pages/contacto.html
@@ -1,58 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/main.css">
     <title>Contacto</title>
 </head>
+
 <body>
-    <header> 
-        <nav  class="navbar flex-row container">
+    <header>
+        <nav class="navbar flex-row container">
             <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
             <ul class="menu flex-row">
                 <li class="menu__item">
-                    <a href="../../index.html" class="menu__link">Menu</a></li>
+                    <a href="../../index.html" class="menu__link">Menu</a>
+                </li>
                 <li class="menu__item">
-                    <a href="productos.html" class="menu__link">Productos</a></li>
+                    <a href="productos.html" class="menu__link">Productos</a>
+                </li>
                 <li class="menu__item">
-                    <a href="galeria.html" class="menu__link">Galeria</a></li>
+                    <a href="galeria.html" class="menu__link">Galeria</a>
+                </li>
                 <li class="menu__item">
-                    <a href="nosotros.html" class="menu__link">Nosotros</a></li>
-                <li class="menu__item">
-                    <a href="contacto.html" class="menu__link">Contacto</a></li>
+                    <a href="nosotros.html" class="menu__link">Nosotros</a>
+                </li>
+                <li class="menu__item--active">
+                    <a href="contacto.html" class="menu__link">Contacto</a>
+                </li>
             </ul>
         </nav>
     </header>
-    <main>   
-        <form action="" method="post">
-        
-        <label for="nombre">NOMBRE</label>
-        <input type="text" placeholder="ingrese su nombre" id="nombre">
-        <br>
-        <label for="correo">CORREO</label>
-        <input type="text" placeholder="ingrese su correo" id="correo">
-        <br>
-        <label for="telefono">TELEFONO</label>
-        <input type="text" placeholder="ingrese su telefono" id="telefono">
-        <br>
-        <label for="consulta">CONSULTA</label>
-        <textarea name="" id="" cols="30" rows="10" placeholder="consulta" id="consulta"></textarea>
-        <br> 
-        Recibir informacion mediante
-        <select name="" id="">
-                <option value="">Correo</option>
-                <option value="">Telefono</option>
-        </select>
-        <br>
-        <input type="submit">
-        <br>
-        <input type="reset">
-        <br>
-        <INPUT type= "checkbox">Deseo recibir noticias, ofertas y promociones de Sol Accursio Pasteleria
-        <br>
-     
+    <main>
+        <form action="" method="post" class="formContacto">
+
+            <label for="nombre"><p>NOMBRE</p></label>
+            <input type="text" placeholder="ingrese su nombre" id="nombre">
+            <br>
+            <label for="correo"><p>CORREO</p></label>
+            <input type="text" placeholder="ingrese su correo" id="correo">
+            <br>
+            <label for="telefono"><p>TELEFONO</p></label>
+            <input type="text" placeholder="ingrese su telefono" id="telefono">
+            <br>
+            <label for="consulta"><p>CONSULTA</p></label>
+            <textarea name="" id="" cols="30" rows="10" placeholder="consulta" id="consulta"></textarea>
+            <br>
+            <p>Recibir informacion mediante</p> 
+            <select name="" id="">
+                <option value=""><p>Correo</p></option>
+                <option value=""><p>Telefono</p></option>
+            </select>
+            <br>
+            <input type="submit">
+            <br>
+            <input type="reset">
+            <br>
+            <INPUT type="checkbox"><p>Deseo recibir noticias, ofertas y promociones de Sol Accursio Pasteleria</p>
+            <br>
+
         </form>
     </main>
     <footer>
@@ -61,6 +70,10 @@
         <a href="" class="redes">Facebook</a>
         <a href="" class="redes">Instagram</a>
         <a href="" class="redes">Twitter</a>
-    </footer>        
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>    
 </body>
+
 </html>
