--- a/public/pages/galeria.html
+++ b/public/pages/galeria.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/main.css">
     <title>Galeria</title>
 </head>
@@ -16,7 +18,7 @@
                     <a href="../../index.html" class="menu__link">Menu</a></li>
                 <li class="menu__item">
                     <a href="productos.html" class="menu__link">Productos</a></li>
-                <li class="menu__item">
+                <li class="menu__item--active">
                     <a href="galeria.html" class="menu__link">Galeria</a></li>
                 <li class="menu__item">
                     <a href="nosotros.html" class="menu__link">Nosotros</a></li>
@@ -44,6 +46,9 @@
         <a href="" class="redes">Facebook</a>
         <a href="" class="redes">Instagram</a>
         <a href="" class="redes">Twitter</a>
-    </footer>        
+    </footer>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>    
 </body>
 </html>
