--- a/public/pages/nosotros.html
+++ b/public/pages/nosotros.html
@@ -25,7 +25,7 @@
                 <li class="menu__item">
                     <a href="galeria.html" class="menu__link">Galeria</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item--active">
                     <a href="nosotros.html" class="menu__link">Nosotros</a>
                 </li>
                 <li class="menu__item">
