--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -19,7 +19,7 @@
         <li class="menu__item">
           <a href="../../index.html" class="menu__link">Menu</a>
         </li>
-        <li class="menu__item">
+        <li class="menu__item--active">
           <a href="productos.html" class="menu__link">Productos</a>
         </li>
         <li class="menu__item">
