--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sol Accuriso Pasteleria es una pasterlaria artesanal destacada por la calidad de sus productos" > 
+    <meta name="keywords" content="PASTELERIA, POSTRE, TORTA, ALFAJOR, CHOCOLATE">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Menu</title>
+    <title>Home /Sol Accuriso Pasteleria</title>
 </head>
 <body id="bodyIndex">
     <header> 
