--- a/public/pages/contacto.html
+++ b/public/pages/contacto.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="respuesta en menos de 24 horas, ascesoramiento personal por nuestros profesionales">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/main.css">
-    <title>Contacto</title>
+    <title>Contacto / Comunicate con nosotros</title>
 </head>
 
 <body>
