--- a/index.html
+++ b/index.html
@@ -1,59 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sol Accuriso Pasteleria es una pasterlaria artesanal destacada por la calidad de sus productos" > 
+    <meta name="description"
+        content="Sol Accuriso Pasteleria es una pasterlaria artesanal destacada por la calidad de sus productos">
     <meta name="keywords" content="PASTELERIA, POSTRE, TORTA, ALFAJOR, CHOCOLATE">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
     <title>Home /Sol Accuriso Pasteleria</title>
 </head>
+
 <body id="bodyIndex">
-    <header> 
-        <nav class="navbar flex-row container">
-            <a href="index.html" class="logo"><img id="logo" src="./public/image/logo.png" alt="logo"></a>
-            <ul class="menu flex-row">
-                <li class="menu__item--active">
-                    <a href="index.html" class="menu__link">Menu</a></li>
-                <li class="menu__item">
-                    <a href="public/pages/productos.html" class="menu__link">Productos</a></li>
-                <li class="menu__item">
-                    <a href="public/pages/galeria.html" class="menu__link">Galeria</a></li>
-                <li class="menu__item">
-                    <a href="public/pages/nosotros.html" class="menu__link">Nosotros</a></li>
-                <li class="menu__item">
-                    <a href="public/pages/contacto.html" class="menu__link">Contacto</a></li>
-            </ul>
-        </nav>
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>HOLA!</strong> NO TE PIERDAS NUESTROS PRODUCTOS ESPECIALES PARA ESTAS PASCUAS!
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-        
-    </header>
-    <main id="mainIndex">
-        <section class="sectionOne">
-            <article>
-                <h1 class="tituloPrincipal">Pasteleria Artesanal</h1>
-                <P class="textoPrincipal">En la familia de Sol Accursio Pasteleria queremos acercarte nuestra mejor pastelería casera, basada en recetas tradicionales, y elaborada siempre con ingredientes de primera calidad.
-                    <br>Pastelería casera,sin conservantes,hecha con amor.
-                </P>
-            </article>          
-        </section>
-        <section class="sectionTwo">
-            <img src="./public/image/alfajores.png" alt="alfajores" class="alfajoresIndex">
-        </section>
-    </main>
-    <footer>
-        <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
-        <a href="" class="redes">Whatssapp</a>
-        <a href="" class="redes">Facebook</a>
-        <a href="" class="redes">Instagram</a>
-        <a href="" class="redes">Twitter</a>
-    </footer>   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
- 
+        <header>
+            <nav class="navbar flex-row container">
+                <a href="index.html" class="logo"><img id="logo" src="./public/image/logo.png" alt="logo"></a>
+                <ul class="menu flex-row">
+                    <li class="menu__item--active">
+                        <a href="index.html" class="menu__link">Menu</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="public/pages/productos.html" class="menu__link">Productos</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="public/pages/galeria.html" class="menu__link">Galeria</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="public/pages/nosotros.html" class="menu__link">Nosotros</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="public/pages/contacto.html" class="menu__link">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>HOLA!</strong> NO TE PIERDAS NUESTROS PRODUCTOS ESPECIALES PARA ESTAS PASCUAS!
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+
+        </header>
+        <main id="mainIndex">
+            <section class="sectionOne">
+                <article>
+                    <h1 class="tituloPrincipal">Pasteleria Artesanal</h1>
+                    <P class="textoPrincipal">En la familia de Sol Accursio Pasteleria queremos acercarte nuestra mejor
+                        pastelería casera, basada en recetas tradicionales, y elaborada siempre con ingredientes de
+                        primera
+                        calidad.
+                        <br>Pastelería casera,sin conservantes,hecha con amor.
+                    </P>
+                </article>
+            </section>
+            <section class="sectionTwo">
+                <img src="./public/image/alfajores.png" alt="alfajores" class="alfajoresIndex">
+            </section>
+        </main>
+        <footer>
+            <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
+            <a href="" class="redes">Whatssapp</a>
+            <a href="" class="redes">Facebook</a>
+            <a href="" class="redes">Instagram</a>
+            <a href="" class="redes">Twitter</a>
+        </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous">
+    </script>
+
 </body>
+
 </html>
