--- a/public/pages/galeria.html
+++ b/public/pages/galeria.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <main id="mainGaleria" >
-        <div class="fotosGaleria">
+        <div class="fotosGaleria container">
             <img src="../image/tortaTreinta.png" alt="tortaTreinta" class="tortaTreinta">
             <img src="../image/tortaFrutillas.png " alt="tortaFrutillas" class="tortaFrutillas">
             <img src="../image/panDulceFrutosSecos.png" alt="panDulceFrutosSecos" class="panDulceFrutosSecos">
