proyecto Final Cambios

--- a/index.html
+++ b/index.html
@@ -15,60 +15,49 @@
 </head>
 
 <body id="bodyIndex">
-        <header>
-            <nav class="navbar flex-row container">
-                <a href="index.html" class="logo"><img id="logo" src="./public/image/logo.png" alt="logo"></a>
-                <ul class="menu flex-row">
-                    <li class="menu__item--active">
-                        <a href="index.html" class="menu__link">Menu</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="public/pages/productos.html" class="menu__link">Productos</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="public/pages/galeria.html" class="menu__link">Galeria</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="public/pages/nosotros.html" class="menu__link">Nosotros</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="public/pages/contacto.html" class="menu__link">Contacto</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <strong>HOLA!</strong> NO TE PIERDAS NUESTROS PRODUCTOS ESPECIALES PARA ESTAS PASCUAS!
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
+    <header>
+        <nav class="navbar flex-row container">
+            <a href="index.html" class="logo"><img id="logo" src="./public/image/logo.png" alt="logo"></a>
+            <ul class="menu flex-row">
+                <li class="menuItem--active">
+                    <a href="index.html" class="menuLink">Menu</a>
+                </li>
+                <li class="menuItem">
+                    <a href="public/pages/productos.html" class="menuLink">Productos</a>
+                </li>
+                <li class="menuItem">
+                    <a href="public/pages/galeria.html" class="menuLink">Galeria</a>
+                </li>
+                <li class="menuItem">
+                    <a href="public/pages/nosotros.html" class="menuLink">Nosotros</a>
+                </li>
+                <li class="menuItem">
+                    <a href="public/pages/contacto.html" class="menuLink">Contacto</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>HOLA!</strong> NO TE PIERDAS NUESTROS PRODUCTOS ESPECIALES PARA ESTAS PASCUAS!
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
 
-        </header>
-        <main id="mainIndex">
-            <section class="sectionOne">
-                <article>
-                    <h1 class="tituloPrincipal">Pasteleria Artesanal</h1>
-                    <P class="textoPrincipal">En la familia de Sol Accursio Pasteleria queremos acercarte nuestra mejor
-                        pastelería casera, basada en recetas tradicionales, y elaborada siempre con ingredientes de
-                        primera
-                        calidad.
-                        <br>Pastelería casera,sin conservantes,hecha con amor.
-                    </P>
-                </article>
-            </section>
-            <section class="sectionTwo">
-                <img src="./public/image/alfajores.png" alt="alfajores" class="alfajoresIndex">
-            </section>
-        </main>
-        <footer>
-            <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
-            <a href="" class="redes">Whatssapp</a>
-            <a href="" class="redes">Facebook</a>
-            <a href="" class="redes">Instagram</a>
-            <a href="" class="redes">Twitter</a>
-        </footer>
+    </header>
+    <main id="mainIndex">
+        
+    </main>
+    <footer>
+        <div class="redes">
+            <a href="https://wa.me/541134842818"><img src="public/image/logoWhats.png" alt="logo whatsapp"></a>
+            <a href="https://www.facebook.com/Sol-Accursio-Pasteler%C3%ADa-824184437749180/photos/?ref=page_internal"><img
+                    src="public/image/logoFb.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com/sol.accursio.pasteleria/"><img src="public/image/logoInsta.png"
+                    alt="logo instagram"></a>
+        </div>
+        <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
 
 </body>
 
