--- a/public/pages/contacto.html
+++ b/public/pages/contacto.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="respuesta en menos de 24 horas, ascesoramiento personal por nuestros profesionales">
+    <meta name="description"
+        content="respuesta en menos de 24 horas, ascesoramiento personal por nuestros profesionales">
+    <meta name="keywords" content="PASTELERIA, POSTRE, TORTA, ALFAJOR, CHOCOLATE, CONTACTO, TELEFONO, PEDIDOS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/main.css">
     <title>Contacto / Comunicate con nosotros</title>
 </head>
@@ -17,64 +19,71 @@
         <nav class="navbar flex-row container">
             <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
             <ul class="menu flex-row">
-                <li class="menu__item">
-                    <a href="../../index.html" class="menu__link">Menu</a>
+                <li class="menuItem">
+                    <a href="../../index.html" class="menuLink">Menu</a>
                 </li>
-                <li class="menu__item">
-                    <a href="productos.html" class="menu__link">Productos</a>
+                <li class="menuItem">
+                    <a href="productos.html" class="menuLink">Productos</a>
                 </li>
-                <li class="menu__item">
-                    <a href="galeria.html" class="menu__link">Galeria</a>
+                <li class="menuItem">
+                    <a href="galeria.html" class="menuLink">Galeria</a>
                 </li>
-                <li class="menu__item">
-                    <a href="nosotros.html" class="menu__link">Nosotros</a>
+                <li class="menuItem">
+                    <a href="nosotros.html" class="menuLink">Nosotros</a>
                 </li>
-                <li class="menu__item--active">
-                    <a href="contacto.html" class="menu__link">Contacto</a>
+                <li class="menuItem--active">
+                    <a href="contacto.html" class="menuLink">Contacto</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="mainContacto">
         <form action="" method="post" class="formContacto">
-
-            <label for="nombre"><p>NOMBRE</p></label>
-            <input type="text" placeholder="ingrese su nombre" id="nombre">
-            <br>
-            <label for="correo"><p>CORREO</p></label>
-            <input type="text" placeholder="ingrese su correo" id="correo">
-            <br>
-            <label for="telefono"><p>TELEFONO</p></label>
-            <input type="text" placeholder="ingrese su telefono" id="telefono">
-            <br>
-            <label for="consulta"><p>CONSULTA</p></label>
-            <textarea name="" id="" cols="30" rows="10" placeholder="consulta" id="consulta"></textarea>
-            <br>
-            <p>Recibir informacion mediante</p> 
-            <select name="" id="">
-                <option value=""><p>Correo</p></option>
-                <option value=""><p>Telefono</p></option>
-            </select>
-            <br>
-            <input type="submit">
-            <br>
-            <input type="reset">
-            <br>
-            <INPUT type="checkbox"><p>Deseo recibir noticias, ofertas y promociones de Sol Accursio Pasteleria</p>
-            <br>
+            <div class="divContacto">
+                <label for="nombre">
+                    <p>NOMBRE</p>
+                </label>
+                <input type="text" placeholder="ingrese su nombre" id="nombre" class="margenesContacto">
+                <label for="correo">
+                    <p>CORREO</p>
+                </label>
+                <input type="text" placeholder="ingrese su correo" id="correo" class="margenesContacto">
+                <label for="telefono">
+                    <p>TELEFONO</p>
+                </label>
+                <input type="text" placeholder="ingrese su telefono" id="telefono" class="margenesContacto">
+                <label for="consulta">
+                    <p>CONSULTA</p>
+                </label>
+                <textarea name="" id="" cols="30" rows="10" placeholder="consulta" id="consulta"></textarea>
+                <p>Recibir informacion mediante</p>
+                <select name="" id="" class="margenesContacto">
+                    <option value="">Correo</option>
+                    <option value="">Whatssapp</option>
+                </select>
+                <label for="checkbox">
+                    <p>Deseo recibir noticias, ofertas y promociones de Sol Accursio Pasteleria</p>
+                    <input type="checkbox">
+                </label>
+                <input type="submit" class="enviarReset">
+                <input type="reset" class="enviarReset">
+            </div>
 
         </form>
     </main>
     <footer>
+        <div class="redes">
+            <a href="https://wa.me/541134842818"><img src="../image/logoWhats.png" alt="logo whatsapp"></a>
+            <a href="https://www.facebook.com/Sol-Accursio-Pasteler%C3%ADa-824184437749180/photos/?ref=page_internal"><img
+                    src="../image/logoFb.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com/sol.accursio.pasteleria/"><img src="../image/logoInsta.png"
+                    alt="logo instagram"></a>
+        </div>
         <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
-        <a href="" class="redes">Whatssapp</a>
-        <a href="" class="redes">Facebook</a>
-        <a href="" class="redes">Instagram</a>
-        <a href="" class="redes">Twitter</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>    
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
