--- a/public/pages/nosotros.html
+++ b/public/pages/nosotros.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="pasteleros profesionales">
+    <meta name="keywords"
+        content="PASTELERIA, POSTRE, TORTA, ALFAJOR, CHOCOLATE, NOSOTROS, PASTELEROS, EQUIPO,CONOCENOS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/main.css">
@@ -17,55 +19,60 @@
         <nav class="navbar flex-row container">
             <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
             <ul class="menu flex-row">
-                <li class="menu__item">
-                    <a href="../../index.html" class="menu__link">Menu</a>
+                <li class="menuItem">
+                    <a href="../../index.html" class="menuLink">Menu</a>
                 </li>
-                <li class="menu__item">
-                    <a href="productos.html" class="menu__link">Productos</a>
+                <li class="menuItem">
+                    <a href="productos.html" class="menuLink">Productos</a>
                 </li>
-                <li class="menu__item">
-                    <a href="galeria.html" class="menu__link">Galeria</a>
+                <li class="menuItem">
+                    <a href="galeria.html" class="menuLink">Galeria</a>
                 </li>
-                <li class="menu__item--active">
-                    <a href="nosotros.html" class="menu__link">Nosotros</a>
+                <li class="menuItem--active">
+                    <a href="nosotros.html" class="menuLink">Nosotros</a>
                 </li>
-                <li class="menu__item">
-                    <a href="contacto.html" class="menu__link">Contacto</a>
+                <li class="menuItem">
+                    <a href="contacto.html" class="menuLink">Contacto</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main id="mainNosotros">
-            <div id="carouselExampleControls" class="carousel slider" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../image/horno.jpg" class="imagenProductos d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../image/pasteleros.jpg" class="imagenProductos d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../image/pasteleros2.jpg" class="imagenProductos d-block w-100" alt="...">
-                    </div>
+
+        <section class="sectionOne">
+            <article>
+                <h1 class="tituloPrincipal">Pasteleria Artesanal</h1>
+                <p class="textoPrincipal">En la familia de Sol Accursio Pasteleria queremos acercarte nuestra mejor
+                    pastelería casera, basada en recetas tradicionales y elaborada siempre con ingredientes de
+                    primera calidad. Pastelería casera, sin conservantes, hecha con amor.
+                </p>
+        </section>
+        <section class="sectionTwo container">
+            <div class="imgNosotros">
+                <div class="imgTodasNos" id="imgPast2">
+                    <img src="../image/pasteleros2.jpg" alt="foto pastelero">
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                <div class="imgTodasNos" id="imgManga">
+                    <img src="../image/manga.jpg" alt="foto pastelero">
+                </div>
+                <div class="imgTodasNos" id="imgPast3">
+                    <img src="../image/pasteleros3.jpg" alt="foto pastelero">
+                </div>
+                <div class="imgTodasNos" id="imgPast4">
+                    <img src="../image/pasteleros4.png" alt="foto pastelero">
+                </div>
             </div>
+        </section>
     </main>
     <footer>
+        <div class="redes">
+            <a href="https://wa.me/541134842818"><img src="../image/logoWhats.png" alt="logo whatsapp"></a>
+            <a href="https://www.facebook.com/Sol-Accursio-Pasteler%C3%ADa-824184437749180/photos/?ref=page_internal"><img
+                    src="../image/logoFb.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com/sol.accursio.pasteleria/"><img src="../image/logoInsta.png"
+                    alt="logo instagram"></a>
+        </div>
         <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
-        <a href="" class="redes">Whatssapp</a>
-        <a href="" class="redes">Facebook</a>
-        <a href="" class="redes">Instagram</a>
-        <a href="" class="redes">Twitter</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
