--- a/public/pages/galeria.html
+++ b/public/pages/galeria.html
@@ -1,55 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="imagenes reales de trabajos realizados">
+    <meta name="keywords" content="PASTELERIA, POSTRE, TORTA, ALFAJOR, CHOCOLATE, FOTOS, PRODUCTOS, TRABAJOS, PEDIDOS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/main.css">
     <title>Galeria / Conoce nuestros trabajos realizados</title>
 </head>
+
 <body id="bodyGaleria">
-    <header> 
-        <nav  class="navbar flex-row container">
+    <header>
+        <nav class="navbar flex-row container">
             <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
             <ul class="menu flex-row">
-                <li class="menu__item">
-                    <a href="../../index.html" class="menu__link">Menu</a></li>
-                <li class="menu__item">
-                    <a href="productos.html" class="menu__link">Productos</a></li>
-                <li class="menu__item--active">
-                    <a href="galeria.html" class="menu__link">Galeria</a></li>
-                <li class="menu__item">
-                    <a href="nosotros.html" class="menu__link">Nosotros</a></li>
-                <li class="menu__item">
-                    <a href="contacto.html" class="menu__link">Contacto</a></li>
+                <li class="menuItem">
+                    <a href="../../index.html" class="menuLink">Menu</a>
+                </li>
+                <li class="menuItem">
+                    <a href="productos.html" class="menuLink">Productos</a>
+                </li>
+                <li class="menuItem--active">
+                    <a href="galeria.html" class="menuLink">Galeria</a>
+                </li>
+                <li class="menuItem">
+                    <a href="nosotros.html" class="menuLink">Nosotros</a>
+                </li>
+                <li class="menuItem">
+                    <a href="contacto.html" class="menuLink">Contacto</a>
+                </li>
             </ul>
         </nav>
     </header>
-    <main id="mainGaleria" >
-        <div class="fotosGaleria container">
-            <img src="../image/tortaTreinta.png" alt="tortaTreinta" class="tortaTreinta">
-            <img src="../image/tortaFrutillas.png " alt="tortaFrutillas" class="tortaFrutillas">
-            <img src="../image/panDulceFrutosSecos.png" alt="panDulceFrutosSecos" class="panDulceFrutosSecos">
-            <img src="../image/panDulceChips.png" alt="panDulceChips" class="panDulceChips">
-            <img src="../image/mesaDulceBautismo.png" alt="mesaDulceBautismo" class="mesaDulceBautismo">
-            <img src="../image/budinMarmolado.png" alt="budinMarmolado" class="budinMarmolado">
-            <img src="../image/brownie.png" alt="brownie" class="brownie">
-            <img src="../image/alfajores.png" alt="alfajores" class="alfajores">
+    <main id="mainGaleria">
+        <div class="galeria">
+            <h1>Nuestros Trabajos</h1>
+            <div class="lineaGaleria"></div>
+            <div class="fotosGaleria container">
+                <div class="imgTodasGal">
+                    <img src="../image/tortaTreinta.png" alt="torta treinta">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/tortaFrutillas.png " alt="torta frutillas">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/panDulceFrutosSecos.png" alt="pan dulce frutos secos">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/panDulceChips.png" alt="pan dulce chips">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/mesaDulceBautismo.png" alt="mesa dulce bautismo">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/budinMarmolado.png" alt="budin marmolado">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/brownie.png" alt="brownie" class="brownie">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/alfajores.png" alt="alfajores" class="alfajores">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/panDulces.png" alt="pan dulces">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/panDulceChipsCorte1.jpg" alt="pan dulce chips corte">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/panDulceFrutosSecosCorte1.jpg" alt="pan dulce frutos secos corte">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/panDulceFrutosSecos21.jpg" alt="pan dulce frutos secos">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/panDulceChips21.jpg" alt="pan dulce chips">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/tortaCuarenta1.jpg" alt="torta cuarenta">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/tortaDurazno1.jpg" alt="torta de durazno">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/budinNaranja21.jpg" alt="budin de naranja">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/tortaBrownie1.jpg" alt="torta brownie">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/tortaAli1.jpg" alt="torta personalizada">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/tortaAli21.jpg" alt="torta personalizada">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/tortaLola1.jpg" alt="torta personalizada">
+                </div>
+                <div class="imgTodasGal">
+                    <img src="../image/lemonPie1.jpg" alt="torta personalizada">
+                </div>
+
+            </div>
         </div>
-        
+
+
     </main>
     <footer>
+        <div class="redes">
+            <a href="https://wa.me/541134842818"><img src="../image/logoWhats.png" alt="logo whatsapp"></a>
+            <a href="https://www.facebook.com/Sol-Accursio-Pasteler%C3%ADa-824184437749180/photos/?ref=page_internal"><img
+                    src="../image/logoFb.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com/sol.accursio.pasteleria/"><img src="../image/logoInsta.png"
+                    alt="logo instagram"></a>
+        </div>
         <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
-        <a href="" class="redes">Whatssapp</a>
-        <a href="" class="redes">Facebook</a>
-        <a href="" class="redes">Instagram</a>
-        <a href="" class="redes">Twitter</a>
-    </footer>    
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>    
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
