--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="productos artesanales de primera calidad">
+  <meta name="keywords" content="PASTELERIA, POSTRE, TORTA, ALFAJOR, CHOCOLATE, PRODUCTOS, TRABAJOS, OPCIONES, PEDIDOS">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="../../css/main.css">
@@ -17,20 +18,20 @@
     <nav class="navbar flex-row container">
       <a href="../../index.html" class="logo"><img id="logo" src="../image/logo.png" alt="logo"></a>
       <ul class="menu flex-row">
-        <li class="menu__item">
-          <a href="../../index.html" class="menu__link">Menu</a>
+        <li class="menuItem">
+          <a href="../../index.html" class="menuLink">Menu</a>
         </li>
-        <li class="menu__item--active">
-          <a href="productos.html" class="menu__link">Productos</a>
+        <li class="menuItem--active">
+          <a href="productos.html" class="menuLink">Productos</a>
         </li>
-        <li class="menu__item">
-          <a href="galeria.html" class="menu__link">Galeria</a>
+        <li class="menuItem">
+          <a href="galeria.html" class="menuLink">Galeria</a>
         </li>
-        <li class="menu__item">
-          <a href="nosotros.html" class="menu__link">Nosotros</a>
+        <li class="menuItem">
+          <a href="nosotros.html" class="menuLink">Nosotros</a>
         </li>
-        <li class="menu__item">
-          <a href="contacto.html" class="menu__link">Contacto</a>
+        <li class="menuItem">
+          <a href="contacto.html" class="menuLink">Contacto</a>
         </li>
       </ul>
     </nav>
@@ -38,80 +39,80 @@
   <main>
     <div class="container my-2">
       <div class="row justify-content-center">
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/alfajorAlmendras" class="card-img-top" alt="alfajor de almendras">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/alfajorAlmendras.jpg" class="card-img-top" alt="alfajor de almendras">
           <div class="card-body">
             <h5 class="card-title">Alfajor de Almendras</h5>
             <p class="card-text">Alfajor de base de nuez relleno de dulce de leche.</p>
             <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
         </div>
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/budinBanana.jpg" class="card-img-top" alt="...">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/budinBanana.jpg" class="card-img-top" alt="budin de banana">
           <div class="card-body">
             <h5 class="card-title">Budin de Banana</h5>
             <p class="card-text">Budín húmedo de banana y dulce de leche. </p>
             <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
         </div>
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/cookies.jpg" class="card-img-top" alt="...">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/cookies.jpg" class="card-img-top" alt="cookies">
           <div class="card-body">
             <h5 class="card-title">Cookies</h5>
             <p class="card-text">Cookie con chips de chocolate.</p>
             <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
         </div>
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/hojaldritas.jpg" class="card-img-top" alt="...">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/hojaldritas.jpg" class="card-img-top" alt="hojaldritas">
           <div class="card-body">
             <h5 class="card-title">Hojaldritas</h5>
             <p class="card-text">Base de hojaldre con crema pastelera y manzana.</p>
             <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
         </div>
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/medialunas.jpg" class="card-img-top" alt="...">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/medialunas.jpg" class="card-img-top" alt="medialunas">
           <div class="card-body">
             <h5 class="card-title">Medialunas</h5>
             <p class="card-text">Medialunas artesanales.</p>
             <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
         </div>
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/budinNaranja.jpg" class="card-img-top" alt="...">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/budinNaranja.jpg" class="card-img-top" alt="budin de naranja">
           <div class="card-body">
             <h5 class="card-title">Budin de Naranja</h5>
             <p class="card-text">Budín húmedo de naranja con crema de queso y almendras.</p>
             <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
         </div>
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/tortaMerengada.jpg" class="card-img-top" alt="...">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/tortaMerengada.jpg" class="card-img-top" alt="torta merengada">
           <div class="card-body">
             <h5 class="card-title">Torta Merengada</h5>
             <p class="card-text">Fruta de estación, crema batida y base de merengue.</p>
             <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
         </div>
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/croissant.jpg" class="card-img-top" alt="...">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/croissant.jpg" class="card-img-top" alt="croissant">
           <div class="card-body">
             <h5 class="card-title">Croissant</h5>
             <p class="card-text">Masa de hojaldre, puede ser relleno dulce o salado.</p>
             <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
         </div>
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/tarteletaVainilla.jpg" class="card-img-top" alt="...">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/tarteletaVainilla.jpg" class="card-img-top" alt="tarteleta de vainilla">
           <div class="card-body">
             <h5 class="card-title">Tarteleta de Vainilla</h5>
             <p class="card-text">Masa sablée rellena con crema de vainilla con una capa de caramelo quemado.</p>
             <a href="#" class="btn btn-primary">Agregar al carro</a>
           </div>
         </div>
-        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1" style="width: 18rem;">
-          <img src="../image/tartaletaLimon.jpg" class="card-img-top" alt="...">
+        <div class="card col-lg-4 col-md-6 col-sm-12 mx-1 my-1">
+          <img src="../image/tartaletaLimon.jpg" class="card-img-top" alt="tarteleta de limon">
           <div class="card-body">
             <h5 class="card-title">Tartaleta de Limon</h5>
             <p class="card-text">Masa sablée de limón rellena con lemon curd y decorada con trozos de merengue.</p>
@@ -122,11 +123,14 @@
     </div>
   </main>
   <footer>
+    <div class="redes">
+      <a href="https://wa.me/541134842818"><img src="../image/logoWhats.png" alt="logo whatsapp"></a>
+      <a href="https://www.facebook.com/Sol-Accursio-Pasteler%C3%ADa-824184437749180/photos/?ref=page_internal"><img
+          src="../image/logoFb.png" alt="logo facebook"></a>
+      <a href="https://www.instagram.com/sol.accursio.pasteleria/"><img src="../image/logoInsta.png"
+          alt="logo instagram"></a>
+    </div>
     <p class="copyright">Copyright © 2022 - Sol Accursio Pasteleria</p>
-    <a href="" class="redes">Whatssapp</a>
-    <a href="" class="redes">Facebook</a>
-    <a href="" class="redes">Instagram</a>
-    <a href="" class="redes">Twitter</a>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
